# JPEG_Project

./: .clangd  .gitignore  CMakeLists.txt  Makefile  tags
docs/: plan.md  png_chunk.md
docs/png/: png_chunk.md  png_chunk_payload.md
docs/random_notes/: chunk_size_type.md
include/common/: common.hpp  common_io.hpp  crc.hpp  test_interfaces.hpp
include/png/: CRC.hpp  PNG.hpp  png.hpp  png_chunk.hpp  png_chunk_base.hpp  png_chunk_payload.hpp  png_types.hpp
lib/: libPNG.dylib
src/: CMakeLists.txt  CRC.cpp  PNG.cpp  dummy.cpp  main.cpp
src/common/: CMakeLists.txt  common_io.cpp  crc.cpp
src/png/: CMakeLists.txt  CRC.cpp  CST.cpp  PNG.cpp  crc.cpp  cst.cpp  png.cpp  png_chunk.cpp  png_chunk_payload.cpp  png_types.cpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  common_test.cpp  crc_test.cpp  test_interface.cpp
tests/include/: test_interface.hpp
tests/include/common/: common_test.hpp  common_test_interfaces.hpp  crc_test.hpp  test_interface.hpp
tests/include/png/: png_chunk_payload_test.hpp  png_chunk_test.hpp  png_png_chunk_payload_test.hpp  png_types_test.hpp
tests/png/: CMakeLists.txt  png_chunk_payload_test.cpp  png_chunk_test.cpp  png_class_test.cpp  png_types_test.cpp
